# FastAPI_Base

./: alembic.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: bf07789c0fe8_create_users_table.py  ec4c5a202463_create_users_table.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: items.py  users.py
tests/: test_main.py
